# sigil-mmf-codex-priv

./: .dockerignore  .gitignore  Cargo.toml  DEPENDENCY_ANALYSIS.md  DOCKER_ONLY_ANALYSIS.md  Dockerfile  Dockerfile.linux-only  MMF-CLA_v1.1.md  MMF-CL_v1.1.md  MMF-CUL_v1.1.md  PR_TEMPLATE.md  REFRACTORING_PLAN_Sigil_MMF_MVP_ASCII.md  RUST_IMPROVEMENTS.md  audit.md  audit.rs  audit_verifier.rs  backup_recovery.rs  canon-seal.json  canon_store.rs  canon_store_sled.rs  codex_manifest_rule_zero.md  config.rs  debug-test.json  deny.toml  docker-compose.yml  example_sigil_license.toml  extensions.rs  founder-license.json  irl_data_pipeline.rs  irl_explainer.rs  irl_feature_store.rs  irl_modes.rs  irl_telemetry.rs  irl_versioning.rs  issue.txt  license_validator.rs  loa.rs  log.txt  log_sink.rs  main.rs  (+12 more)
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: rust.yml
archive/: sigilDERG_ONNX.py
canon files/: nomicon_canon_nodes.jsonl
canon_files/: canon_node_1.jsonl
cpp/: .gitignore  BUILD_GUIDE.md  CMakeLists.txt  COMPARISON_SUMMARY.md  FEATURE_PARITY_MATRIX.md  IMPLEMENTATION_SUMMARY.md  MISSING_FEATURES.md  PROJECT_STRUCTURE.md  README.md  RUST_TO_CPP_MAPPING.md
cpp/include/sigil/: audit.hpp  canon_store.hpp  canonical_record.hpp  cli.hpp  config.hpp  crypto.hpp  json_canonicalization.hpp  license_validator.hpp  loa_policy.hpp  quorum_system.hpp  rate_limiter.hpp  trust_linear.hpp  types.hpp  web_server.hpp  witness_registry.hpp
cpp/src/: audit.cpp  canon_store.cpp  canonical_record.cpp  cli.cpp  config.cpp  crypto.cpp  json_canonicalization.cpp  license_validator.cpp  loa_policy.cpp  main.cpp  quorum_system.cpp  rate_limiter.cpp  trust_linear.cpp  types.cpp  web_server.cpp  witness_registry.cpp
cpp/tests/: CMakeLists.txt  test_canonical_record.cpp  test_crypto.cpp  test_json_canonicalization.cpp  test_license_validator.cpp  test_loa.cpp  test_loa_policy.cpp  test_main.cpp  test_rate_limiter.cpp  test_trust_linear.cpp  test_witness_registry.cpp
docs/: KEY_MANAGEMENT.md  TODO_IMPLEMENTATION_ROADMAP.md  license_example.toml
keys/: canon_signing_key.json
keys/encrypted/: canon_key_0001.json
legacy/src/: irl_adapter.rs  irl_feature_store.rs  irl_telemetry.rs  irl_trust_evaluator.rs  narrative_irl_extension.rs  sigil_runtime_core_patch_with_irl.rs  trainer.rs
secrets/: dev_license.sig  dev_license.sigil  dev_license_claim.json  sigil_seal_private.pem  sigil_seal_public.pem
src/: api_errors.rs  app_state.rs  audit.rs  audit_chain.rs  audit_store.rs  audit_verifier.rs  backup_recovery.rs  canon_diff_chain.rs  canon_guard.rs  canon_init_tool.rs  canon_loader.rs  canon_store.rs  canon_store_codex_nexus.rs  canon_store_sled.rs  canon_store_sled_encrypted.rs  canon_validator.rs  canonical_record.rs  canonicalize.rs  cli.rs  config.rs  config_loader.rs  config_security.rs  csrf_protection.rs  elevation_verifier.rs  enhanced_web.rs  errors.rs  extension_runtime.rs  extensions.rs  input_validator.rs  irl_adapter.rs  irl_data_pipeline.rs  irl_executor.rs  irl_explainer.rs  irl_feature_store.rs  irl_modes.rs  irl_reward.rs  irl_runtime.rs  irl_telemetry.rs  irl_train_tool.rs  irl_trust_evaluator.rs  (+40 more)
src/api/: license.rs  memory.rs  mod.rs  quorum.rs
src/crypto/: keywrap.rs  mod.rs
src/module/: mod.rs  rust_mentor.rs
src/modules/example_module/: manifest.toml
src/proto/: mod.rs  rpc.rs
src/tests/: audit.rs  audit_chain_test.rs  canon_store.rs  config.rs  irl.rs  key_lifecycle_test.rs  license.rs  license_validate_endpoint.rs  mod.rs  module_execution_comprehensive_test.rs  module_integration_test.rs  module_tests.rs  quorum_enforcement_test.rs  quorum_interactive_workflow_test.rs  security_tests.rs  test_utils.rs  web.rs
src/tests/.github/workflows/: canon_ci.yml
src/tests/assets/: sigil_license_bad_fp.toml  sigil_license_bad_runtime.toml  sigil_license_missing_header.toml  sigil_license_unsealed.toml
test_logs/: frozen_chains.jsonl
tests/: canon_roundtrip.rs  canon_signer_integration.rs  e2e_tests.rs  jcs_conformance.rs  license.rs  trustguard.rs
tests/assets/: sigil_license_bad_fp.toml  sigil_license_bad_runtime.toml  sigil_license_expired.toml  sigil_license_invalid_syntax.toml  sigil_license_unsealed.toml  sigil_license_valid.toml
