[package]
name = "mmf_sigil"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mmf_sigil"
path = "src/main.rs"

[[bin]]
name = "trainer"
path = "src/bin/trainer.rs"

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
base64 = "0.21"
sha2 = "0.10"
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
sled = "0.34"
toml = "0.8"
clap = { version = "4.0", features = ["derive"] }

# Cryptographic dependencies
aes-gcm = "0.10"
rand = "0.9"
getrandom = "0.2"

# Cross-platform utilities
dirs = "5.0"

# HTTP client
reqwest = { version = "0.12", features = ["blocking", "json"] }

# File handling
zip = "0.6"

# Configuration
figment = { version = "0.10", features = ["env", "toml"] }

# Logging
log = "0.4"

# Utilities
lazy_static = "1.4"

# Candle ML framework (replacing Burn)
candle-core = "0.9.1"
candle-nn = "0.9.1"
candle-transformers = "0.9.1"

# ONNX support
tract-onnx = "0.21.10"

[dev-dependencies]
tempfile = "3.0"
