[package]
name = "mmf_sigil"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
resolver = "2"

[[bin]]
name = "mmf_sigil"
path = "src/main.rs"



[[bin]]
name = "canon_signer"
path = "src/bin/canon_signer.rs"

[dependencies]
# Core dependencies
serde = { version = "=1.0.219", features = ["derive"] }
serde_json = "=1.0.143"
chrono = { version = "0.4", features = ["serde"] } # Not in critical list
tokio = { version = "=1.47.1", default-features = false, features = ["rt-multi-thread", "macros", "time"] }
axum = { version = "=0.8.4", default-features = false, features = ["macros", "json", "http1", "http2", "tokio"] }
tower = { version = "=0.5.2", default-features = false }
tower-http = { version = "=0.6.6", default-features = false, features = ["cors"] }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json", "time"] }
anyhow = "1.0"
thiserror = "2.0"
uuid = { version = "1.18", features = ["v4", "serde"] }
base64 = "0.22"
sha2 = "=0.10.9"
ed25519-dalek = { version = "=2.2.0", features = ["rand_core"] }
sled = "0.34"
toml = "0.9"
clap = { version = "4.5", features = ["derive"] }

# Cryptographic dependencies
aes-gcm = "=0.10.3"
rand = "=0.8.5"
getrandom = "=0.3.3"
rand_core = "0.6"
argon2 = "0.5"

# Cross-platform utilities (optional for Docker-only deployment)
dirs = { version = "6.0", optional = true }

# HTTP client (minimal features for IRL adapter)
reqwest = { version = "=0.12.23", default-features = false, features = ["blocking", "json", "rustls-tls", "gzip"] }

# File handling (minimal features)
zip = { version = "4.3", default-features = false, features = ["deflate"] }

# Configuration (minimal features)
figment = { version = "0.10", default-features = false, features = ["env", "toml"] }

# Logging
log = "0.4"
env_logger = "0.10"

# Utilities
lazy_static = "1.4"
regex = "1.10"
hex = "0.4"



# Candle ML framework (core component - IRL trust scoring)
candle-core = "=0.9.1"
candle-nn = "=0.9.1"
candle-transformers = "=0.9.1"

# ONNX support (core component - model import/export)
tract-onnx = "=0.21.10"

# Observability (minimal features)
prometheus = { version = "=0.14.0", default-features = false, features = ["process"] }

[dev-dependencies]
tempfile = "3.0"

[features]
default = ["full"]
full = ["dirs"]
minimal = []
docker = []
web = []
cli = []
ml = []
security = []
# IRL features - disabled by default for logistic-only MVP
irl = []
